<resources>
    <string name="app_name">HappyPlaces</string>
    <string name="add_fab_description">Add new happy place</string>
    <string name="detail_image_description">Image of Happy Place</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="no_items_text">NO HAPPY PLACES FOUND YET</string>

    <string name="maps_api_key">AIzaSyApvb6VbZ2ZOYDbStjn3_pfCTB--wAgyMA</string>
    <string name="view_on_map_text_btn">VIEW ON MAP</string>
    <string name="select_current_place_text">SELECT CURRENT PLACE</string>
</resources>