<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHappyPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addPlaceToolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/mainSv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPlaceToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_content_padding">

            <EditText
                android:id="@+id/titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textCapWords"
                android:hint="@string/edit_text_hint_title"
                android:background="@drawable/shape_image_view_border"
                android:padding="5dp"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/edit_text_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/descriptionEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                android:autofillHints=""
                android:padding="5dp"
                android:hint="@string/edit_text_hint_description"
                android:background="@drawable/shape_image_view_border"
                android:inputType="textCapSentences"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/edit_text_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleEt" />

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                android:padding="5dp"
                android:autofillHints=""
                android:hint="@string/edit_text_hint_date"
                android:focusable="false"
                android:background="@drawable/shape_image_view_border"
                android:focusableInTouchMode="false"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/edit_text_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEt"/>

            <EditText
                android:id="@+id/locationEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                android:autofillHints=""
                android:focusable="false"
                android:padding="5dp"
                android:background="@drawable/shape_image_view_border"
                android:focusableInTouchMode="false"
                android:hint="@string/edit_text_hint_location"
                android:inputType="text"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/secondary_text_color"
                android:textSize="@dimen/edit_text_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTv"/>

            <TextView
                android:id="@+id/selectCurrentLocationTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/select_current_place_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/select_current_place_padding"
                android:text="@string/select_current_place_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/select_current_place_textSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationEt"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/placeImageIv"
                android:layout_width="@dimen/add_screen_place_image_size"
                android:layout_height="@dimen/add_screen_place_image_size"
                android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:padding="@dimen/add_screen_place_image_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/add_screen_image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectCurrentLocationTv" />

            <TextView
                android:id="@+id/addImageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/add_screen_text_add_image_padding"
                android:text="@string/text_add_image"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/add_screen_text_add_image_textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/saveBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/placeImageIv"
                app:layout_constraintTop_toBottomOf="@+id/locationEt"
                app:layout_constraintVertical_bias="0.019" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
                android:background="@drawable/shape_button_rounded"
                android:gravity="center"
                android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
                android:text="@string/btn_text_save"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placeImageIv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>